<resources>
    <string name="app_name">Dalaleen</string>

    <string name="google_maps_key">AIzaSyCFyA0JbF7XkZqEaYS3wXu2xudMLShYIZg</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="sign_up">Sign up</string>
    <string name="back_to">Back to</string>
    <string name="enter_password">Enter Password</string>
    <string name="please_enter_phone_no.">Please enter phone no.</string>
    <string name="Enter_phone_number">Enter Phone Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="skip">Skip</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="owner">Owner</string>
    <string name="agent">Agent</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="cancel">Cancel</string>
    <string name="verify">Verify</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_location_search">Enter location to search</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="submit">Submit</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="enter_your_otp_code">Enter your otp code</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_your_otp_no">Enter your otp number</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="otp_sent_successfully">Success! - OTP has sent to your registered mobile number.</string>
    <string name="text_buttom_explore">Explore</string>
    <string name="text_buttom_neareby">Neareby</string>
    <string name="text_buttom_search">Search</string>
    <string name="text_buttom_add_p">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_advsearch">Advance Search</string>
    <string name="title_adv_search">Advance Search</string>
    <string name="search">Search</string>
    <string name="title_explore">Explore</string>
    <string name="title_nearby">Near by</string>
    <string name="searchbylocation">Search by location</string>
    <string name="catagory">Category</string>
    <string name="lbl_noofbedroom">Number Of Bedroom</string>
    <string name="featureproperty">Feature Properties</string>
    <string name="Hot_property">Hot Properties</string>
    <string name="price">Price</string>
    <string name="Addproperty">Add Property</string>
    <string name="subcat">Sub category</string>
    <string name="description">DESCRIPTION</string>
    <string name="Explore">Explore</string>
    <string name="Browse">Browse</string>
    <string name="Post_property">Post Property</string>
    <string name="MyProperty">My Properties</string>
    <string name="myFavorites">My Favorites</string>
    <string name="MySaveedmember">My Saved Members</string>
    <string name="Logout">Log out</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="setsize">Set Size</string>
    <string name="setbudgete">Set Budget</string>
    <string name="Keywordtosearch">Key word to search</string>

</resources>
